       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
11-Feb-2002
Problems corrected:
    1. Subframes with the same names as others in the same tree no longer cause an infinite loop / stack overflow

 5-Feb-2002
Additions:
    1. Form parameters can be reset to their initial values using WebForm.reset().

 4-Feb-2002
Problems corrected:
    1. Forms with query strings included in the action attribute now are submitted with that string intact.
Additions:
    1. Parameters defined in form query strings are now included in the known parameters of a form and requests
       built from it.

 1-Feb-2002
Acknowledgements:
    Thanks to Jochen Hiller for supplying code to use jaxp to select a parser rather than being hardcoded to xerces

Additions:
    1. HttpUnit can now use any jaxp-compliant parser, rather than just xerces.

30-Jan-2002
Acknkowledgements:
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit

Additions:
    1. ServletUnit now supports the <context-param> tag.

24-Jan-2002
Additions:
    1. You can now call HttpUnitOptions.setAutoRedirect( false ) to enable explicit testing of redirect requests.
    2. WebClient now exposes the protected method writeMessageBody to ease implementation of new subclasses

23-Jan-2002
Problems fixed:
    1. Control characters and spaces created by breaking HTML in the middle are now trimmed from link parameters.

21-Jan-2002
Additions:
    1. MessageBodyWebRequest's constructors and inner class are now public, allowing outside code to create new request classes.
    2. ServletUnit now supports creating a RequestDispatcher from ServletContext to forward to other servlets.
       Support for this is rudimentary at present: query parameters on the request dispatcher create are ignored.

17-Jan-2002
Problems fixed: